@@ -1,3 +1,9 @@
+2007-03-08  Gary Benson  <gbenson@redhat.com>
+
+	PR classpath/30983:
+	* gnu/xml/dom/ls/DomLSParser.java (getInputSource):
+	Do not use the entity resolver to resolve the top-level document.
+
 2007-03-07  Tom Tromey  <tromey@redhat.com>
 
 	PR classpath/31057:
